[Issue #125] Adding more adequate overflow behavior to merchandise page and remaining search pages

--- a/frontend/src/app/components/merchandise/merchandise.component.css
+++ b/frontend/src/app/components/merchandise/merchandise.component.css
@@ -15,16 +15,17 @@
 }
 
 .card-title-font {
-  display: -webkit-inline-flex;
+  font-size: 24px;
+  color: black;
+  font-weight: bold;
+  font-family: Segue UI, Roboto, "Helvetica Neue", sans-serif;
+  display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2; /* number of lines to show */
-  line-height: 40px; /* fallback */
-  height: 80px; /* fallback */
+  line-height: 30px; /* fallback */
+  height: 60px; /* fallback */
   text-overflow: ellipsis;
   overflow: hidden;
-  font-size: 30px;
-  font-weight: bold;
-  color: black;
 }
 
 
