--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -247,4 +247,5 @@ label {
   -ms-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap;
+  height: 40px;
 }
